# ai-industry-project

./: .gitignore  main.ipynb  pyproject.toml
src/: main.ipynb  main.ipynb (modify)  util.py  util.py (modify)
util/: util.py
