[project]
name = "ai-industry-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Brage Vik",email = "brage.vik@lyse.net"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib (>=3.10.7,<4.0.0)",
    "numpy (>=2.3.4,<3.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
